<resources>
    <string name="app_name">My Application</string>
    <string name="smart_city_system">Smart City System</string>
    <string name="smart_parking_button">Smart Parking Button</string>
    <string name="smart_street_button">Smart Street Button</string>
    <string name="smart_agriculture_button">Smart Agriculture Button</string>
    <string name="smart_building_button">Smart Building Button</string>
    <string name="title_activity_smart_street">SmartStreet</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_smart_parking">SmartParking</string>
    <string name="backbutton">backButton</string>
    <string name="smart_street">Smart Street</string>
    <string name="smart_parking">Smart Parking</string>
    <string name="smart_agriculture">Smart Agriculture</string>
    <string name="smart_building">Smart Building</string>
    <string name="title_activity_tt">tt</string>
    <string name="parking_sensor">Parking Sensor</string>
    <string name="proximity_sensor">Proximity Sensor</string>
    <string name="smart_lighting">Smart Street Lighting</string>
    <string name="cctv">CCTV</string>
    <string name="CCTV">TODO</string>
    <string name="SmartDoor">TODO</string>
    <string name="soil_humidity">Soil Humidity</string>
    <string name="temperature_humidity"><![CDATA[Temperature & Humidity]]></string>
    <string name="distance_m">distance m</string>
    <string name="brightness_4000_lumens">Brightness (lumens):</string>
    <string name="human_detector">Human Detector</string>
    <string name="human_detection">Human Detection</string>
    <string name="_60cm">/60cm</string>
    <string name="_0">0</string>
    <string name="_7m">/5m</string>
    <string name="accumulated_number">Accumulated people pass by:</string>
    <string name="temp_humd">Temperature &amp; Humidity</string>
    <string name="check_humidity">Check Humidity</string>
    <string name="Status">Status:</string>
    <string name="Temperature">Temperature:</string>
    <string name="Humidity">Humidity:</string>
    <string name="weather">Weather:</string>
    <string name="Check">Check</string>
    <string name="soil_humidity1">Soil Humidity:</string>

    <string name="_4000">4000</string>
    <string name="distance_in_meter">Distance (m)</string>
    <string name="_50"><![CDATA[>50]]></string>

    <string name="in_ground_sensor">In-ground sensor</string>
    <string name="communithings">CommuniThings</string>
    <string name="barrier_gate">Barrier Gate</string>
    <string name="cmDetected">0</string>
    <string name="totalMax">/70cm</string>
    <string name="slot_status">Slot Status</string>
    <string name="lightColor">TODO</string>
    <string name="smart_door">Smart Door</string>
    <string name="live_message">Live Message</string>
    <string name="message_you_want_to_type_max_16_char">Message you want to type (Max 16 char)</string>
    <string name="send">SEND</string>
    <string name="security_mode">SECURITY MODE</string>
    <string name="intruder_detection">Intruder Detection</string>
    <string name="meterDetection">-</string>
    <string name="farm_is_safe">Farm is safe</string>
    <string name="distance_meter">Distance (m)</string>
    <string name="intruder_status">Intruder Status</string>
    <string name="soil_humid">Soil Humidity (%):</string>
    <string name="todo">TODO</string>
    <string name="percent">-</string>
    <string name="plant_is_healthy">Plant is healthy</string>
</resources>